build: remove unused jdk.incubator.vector preview feature