@@ -137,7 +137,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <argLine>--add-modules jdk.incubator.vector --enable-native-access=ALL-UNNAMED ${jacocoArgLine}</argLine>
+                    <argLine>--enable-native-access=ALL-UNNAMED ${jacocoArgLine}</argLine>
                 </configuration>
             </plugin>
         </plugins>
